# smalltime

./: .codecov.yml  .coveragerc  .readthedocs.yml  README.md  pyproject.toml  timer.py
.github/workflows/: publish-to-test-pypi.yml  publish.yml  test.yml
docs/source/: conf.py  index.rst
smalltime/: cli.py  timer.py
tests/: test_smalltime.py  test_timer.py
